# sops-demo

./: .creds.yml  .gitignore  .secrets.yml  .sops.yaml  README.md  app.py  pyproject.toml
